--- a/sharding-jdbc/src/main/resources/application.properties
+++ b/sharding-jdbc/src/main/resources/application.properties
@@ -1,21 +1,22 @@
 ## sharding-jdbc 分片
+spring.main.allow-bean-definition-overriding=true
 # 配置真实数据源
 spring.shardingsphere.datasource.names=ds0,ds1
 # 配置第 1 个数据源
 spring.shardingsphere.datasource.ds0.type=com.alibaba.druid.pool.DruidDataSource
 spring.shardingsphere.datasource.ds0.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.shardingsphere.datasource.ds0.jdbc-url=jdbc:mysql://localhost:3306/ds0
+spring.shardingsphere.datasource.ds0.url=jdbc:mysql://localhost:3306/ds0?useUnicode=true&characterEncoding=utf8&tinyInt1isBit=false&useSSL=false&serverTimezone=GMT
 spring.shardingsphere.datasource.ds0.username=root
 spring.shardingsphere.datasource.ds0.password=123456
 # 配置第 2 个数据源
 spring.shardingsphere.datasource.ds1.type=com.alibaba.druid.pool.DruidDataSource
 spring.shardingsphere.datasource.ds1.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.shardingsphere.datasource.ds1.jdbc-url=jdbc:mysql://localhost:3306/ds1
+spring.shardingsphere.datasource.ds1.url=jdbc:mysql://localhost:3306/ds1?useUnicode=true&characterEncoding=utf8&tinyInt1isBit=false&useSSL=false&serverTimezone=GMT
 spring.shardingsphere.datasource.ds1.username=root
 spring.shardingsphere.datasource.ds1.password=123456
 # 配置分片表 t_order
 # 指定真实数据节点
-spring.shardingsphere.sharding.tables.t_order.actual-data-nodes=ds$->{0..1}.t_order$->{0..1}
+spring.shardingsphere.sharding.tables.t_order.actual-data-nodes=ds$->{0..1}.t_order_$->{0..2}
 ### 分库策略
 # 分库分片健
 spring.shardingsphere.sharding.tables.t_order.database-strategy.inline.sharding-column=order_id
@@ -26,15 +27,30 @@ spring.shardingsphere.sharding.tables.t_order.database-strategy.inline.algorithm
 spring.shardingsphere.sharding.tables.t_order.table-strategy.inline.sharding-column=order_id
 # 分表算法
 spring.shardingsphere.sharding.tables.t_order.table-strategy.inline.algorithm-expression=t_order_$->{order_id % 3}
-# 自增主键字段
+# 配置分片表 t_order_item
+spring.shardingsphere.sharding.tables.t_order_item.actual-data-nodes=ds$->{0..1}.t_order_item_$->{0..2}
+spring.shardingsphere.sharding.tables.t_order_item.database-strategy.inline.sharding-column=order_id
+spring.shardingsphere.sharding.tables.t_order_item.database-strategy.inline.algorithm-expression=ds$->{order_id % 2}
+spring.shardingsphere.sharding.tables.t_order_item.table-strategy.inline.sharding-column=order_id
+spring.shardingsphere.sharding.tables.t_order_item.table-strategy.inline.algorithm-expression=t_order_item_$->{order_id % 3}
+spring.shardingsphere.sharding.tables.t_order_item.key-generator.column=item_id
+spring.shardingsphere.sharding.tables.t_order_item.key-generator.type=SNOWFLAKE
+## 自增主键字段
 spring.shardingsphere.sharding.tables.t_order.key-generator.column=order_id
 # 自增主键ID 生成方案
 spring.shardingsphere.sharding.tables.t_order.key-generator.type=SNOWFLAKE
+# 工作机器唯一 id
+spring.shardingsphere.sharding.tables.t_order.key-generator.props.worker.id=0000
+#
+spring.shardingsphere.sharding.tables.t_order.key-generator.max.tolerate.time.difference.milliseconds=5
 # 绑定表关系
 spring.shardingsphere.sharding.binding-tables=t_order,t_order_item
 # 配置广播表
 spring.shardingsphere.sharding.broadcast-tables=t_config
 # 是否开启 SQL解析日志
 spring.shardingsphere.props.sql.show=true
+# 默认数据源，未分片的表默认执行库
+spring.shardingsphere.sharding.default-data-source-name=ds0
 mybatis-plus.mapper-locations=classpath:mapping/*.xml
 mybatis-plus.map-underscore-to-camel-case=true
+
