--- a/sharding-jdbc/src/main/resources/application.properties
+++ b/sharding-jdbc/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 ## sharding-jdbc 分片
 spring.main.allow-bean-definition-overriding=true
 # 配置真实数据源
-spring.shardingsphere.datasource.names=ds0,ds1
+spring.shardingsphere.datasource.names=ds0,ds1,s0
 # 配置第 1 个数据源
 spring.shardingsphere.datasource.ds0.type=com.alibaba.druid.pool.DruidDataSource
 spring.shardingsphere.datasource.ds0.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -14,6 +14,15 @@ spring.shardingsphere.datasource.ds1.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.shardingsphere.datasource.ds1.url=jdbc:mysql://localhost:3306/ds1?useUnicode=true&characterEncoding=utf8&tinyInt1isBit=false&useSSL=false&serverTimezone=GMT
 spring.shardingsphere.datasource.ds1.username=root
 spring.shardingsphere.datasource.ds1.password=123456
+# 配置第 ds0 slave 数据源
+spring.shardingsphere.datasource.s0.type=com.alibaba.druid.pool.DruidDataSource
+spring.shardingsphere.datasource.s0.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.shardingsphere.datasource.s0.url=jdbc:mysql://localhost:3306/ds0-slave?useUnicode=true&characterEncoding=utf8&tinyInt1isBit=false&useSSL=false&serverTimezone=GMT
+spring.shardingsphere.datasource.s0.username=root
+spring.shardingsphere.datasource.s0.password=123456
+# 配置第 ds0 slave rules 主从规则
+spring.shardingsphere.sharding.master-slave-rules.ds0.master-data-source-name=ds0
+spring.shardingsphere.sharding.master-slave-rules.ds0.slave-data-source-names=s0
 # 配置分片表 t_order
 # 指定真实数据节点
 spring.shardingsphere.sharding.tables.t_order.actual-data-nodes=ds$->{0..1}.t_order_$->{0..2}
